# SkySpecExample

./: CMakeLists.txt  README.md  vcpkg.json
SkySpec/SkySpec/: SKSE.h
SkySpec/SkySpec/SKSE/: Initialization.h
SkySpec/SkySpec/Server/: MessageDispatcher.h  SpecServer.h  SpecServerConnection.h  TestSuiteRunner.h
SkySpecBandit/SkySpec/: Bandit.h
SkySpecBandit/SkySpec/SKSE/: Bandit.h
SkySpecBandit/SkySpec/SKSE/Bandit/: BanditTestSuiteRunner.h
spec/: FirstSpec.cpp
src/: plugin.cpp
